# SimpleLoreAuth

./: .dockerignore  .env.example  .gitignore  Caddyfile  Caddyfile.manual-tls.example  Cargo.toml  Dockerfile  Dockerfile.bundled  README.en.md  README.md  build.rs  compose.build.yaml  compose.bundled.yaml  compose.nas.yaml  compose.yaml  lore-server.local.toml.example
.github/workflows/: docker-publish.yml
docker/: entrypoint-bundled.sh  entrypoint.sh
proto/: auth_api.proto  rebac_api.proto
proto/lore/model/v1/: model.proto
proto/lore/repository/v1/: repository.proto
proto/lore/revision/v1/: revision.proto
proto/lore/thin_client/v1/: thin_client.proto
src/: db.rs  keys.rs  lore_admin.rs  main.rs  proto.rs  service.rs  web.rs
